kubernetes/k3s-prod-a/qbittorrent/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: docker.io/linuxserver/qbittorrent:5.0.0@sha256:758c19794b7da7f6c39d9d35d4b07693dac41e0f727b7622fce116ee79375e5c
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: qbittorrent-downloads
              mountPath: /downloads
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
